list of auctions for seller_id (#27)
* list of auctions for seller_id

* feat: moving get customer auctions

* feat: remove unused import

* feat: rename related name

---------
